# obsidian2neorg

./: Cargo.toml  README.md  transform_folder.sh
src/: main.rs
